<resources>
    <string name="app_name">时间锁</string>

    <string name="sure">确定</string>
    <string name="cancel">取消</string>
    <string name="delete">删除</string>
    <string name="finish">完成</string>
    <string name="edit">编辑</string>
    <string name="share">分享</string>
    <string name="crash">已崩溃</string>
    <string name="repeat">重复</string>
    <string name="type">类型</string>
    <string name="none">无</string>
    <string name="time">时间</string>

    <string name="toast_exit">再按一次退出</string>

    <!--activity title-->
    <string name="lock">时间锁</string>
    <string name="usage">使用统计</string>
    <string name="setting">设置</string>
    <string name="about">关于</string>

    <!--星期-->
    <string name="monday">一</string>
    <string name="tuesday">二</string>
    <string name="wednesday">三</string>
    <string name="thursday">四</string>
    <string name="friday">五</string>
    <string name="saturday">六</string>
    <string name="sunday">日</string>
    <string name="week">星期</string>

    <string name="monday_week">周一</string>
    <string name="tuesday_week">周二</string>
    <string name="wednesday_week">周三</string>
    <string name="thursday_week">周四</string>
    <string name="friday_week">周五</string>
    <string name="saturday_week">周六</string>
    <string name="sunday_week">周日</string>

    <string name="minute">分钟</string>
    <string name="hour">小时</string>
    <string name="second">秒</string>

    <!--锁-->
    <string name="lock_start">开始时间</string>
    <string name="lock_finish">结束时间</string>
    <string name="lock_use">锁定</string>
    <string name="lock_forbidden">禁用</string>


    <!--设置-->
    <string name="set_background">背景设置</string>
    <string name="toast_cannot_delete_background_within">不能删除应用自带背景</string>
    <string name="toast_long_click_for_delete">长按删除背景</string>


    <string name="lock_after_exit">退出自毁</string>
    <string name="lock_after_exit_tip">时间锁离开屏幕时销毁前台活动,释放内存</string>

    <string name="boot_completed">开机自启</string>
    <string name="boot_completed_tip">手机重启后自动打开后台服务</string>

    <string name="set_update">更新设置</string>
    <string name="set_update_warn">有更新时提醒</string>
    <string name="set_update_download">连接wifi时自动下载更新包</string>

    <string name="set_language">语言设置</string>
    <string name="language_chinese">中文</string>
    <string name="language_english">英语</string>
    <string name="language_japanese">日语</string>

    <!--更多-->
    <string name="use_help">使用帮助</string>
    <string name="feedback">用户反馈</string>
    <string name="about_me">关于时间锁</string>
    <string name="check_update">检查更新</string>

    <!--拦截-->
    <string name="return_desk">返回桌面</string>
    <string name="intercept_mode">拦截模式</string>
    <string name="intercept_mode_warn">提醒模式</string>
    <string name="intercept_interval">拦截间隔</string>
    <string name="intercept_mode_force">强制模式</string>
    <string name="intercept_background">拦截背景</string>
    <string name="judge_interval">拦截精度</string>
    <string name="intercept_show_time">显示图标</string>
    <string name="open_lock_true">锁已开启</string>
    <string name="open_lock_false">锁未开启</string>

    <!--锁-->
    <string name="lock_use_time_tip">今天已使用时间:</string>

    <string name="lock_use_new">当前锁定</string>
    <string name="lock_forbidden_new">当前禁用</string>
    <string name="lock_type">时间锁类型</string>
    <string name="lock_add_repeat">重复星期</string>
    <string name="confirm">确定</string>
    <string name="lock_use_time">时间限定</string>


    <string name="left">余:</string>
    <string name="time_over">时间使用配额</string>
    <string name="time_over_over">已用光时间配额</string>

    <string name="toast_no_choose_start_time">请选择开始时间</string>
    <string name="toast_no_choose_finish_time">请选择结束时间</string>
    <string name="toast_finishAfterStart">请选择结束时间大于开始时间</string>


    <string name="no_permission">权限不够\n请打开手机设置，点击安全-高级，在有权查看使用情况的应用中，为时间锁打上勾</string>
    <string name="get_permission">现在就去</string>


    <!--activity标签-->
    <string name="title_activity_enter">EnterActivity</string>
    <string name="title_activity_first">FirstActivity</string>

    <string name="title_activity_main">MainActivity</string>
    <string name="title_activity_lock">LockActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_main2">Main2Activity</string>


</resources>
