<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <import type="com.ruiaa.timelock.common.consts.AppCode"/>
        <import type="com.ruiaa.timelock.common.utils.DataConvert"/>

        <variable
            name="lockAdd"
            type="com.ruiaa.timelock.main.entity.Lock"
            />

        <variable
            name="modelAddLock"
            type="com.ruiaa.timelock.main.modules.lock.viewmodel.LockFragmentModel"
            />

        <variable
            name="dialog"
            type="android.support.v7.app.AlertDialog"
            />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="4dp"
        >


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="60dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true"
                android:text="@string/lock_type"
                />

            <Button
                android:layout_width="60dp"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:onClick="@{()->lockAdd.setType(lockAdd.type==AppCode.LOCK_TYPE_FORBIDDEN ? AppCode.LOCK_TYPE_USE : AppCode.LOCK_TYPE_FORBIDDEN)}"
                android:text="@{lockAdd.type==AppCode.LOCK_TYPE_FORBIDDEN ? @string/lock_forbidden : @string/lock_use}"
                />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="60dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true"
                android:text="@string/lock_start"/>

            <Button
                android:id="@+id/lock_add_start"
                android:layout_width="60dp"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:gravity="center"
                android:onClick="@{()-> modelAddLock.setStartTime(lockAdd)}"
                android:text="@{DataConvert.time(lockAdd.startTime)}"
                />


        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="60dp"
            >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true"
                android:text="@string/lock_finish"/>

            <Button
                android:id="@+id/lock_add_finish"
                android:layout_width="60dp"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:gravity="center"
                android:onClick="@{()-> modelAddLock.setFinishTime(lockAdd)}"
                android:text="@{DataConvert.time(lockAdd.finishTime)}"
                />


        </RelativeLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_centerInParent="true"
            android:layout_toRightOf="@+id/lock_add_repeat"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/lock_add_repeat"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/lock_add_repeat"/>

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_margin="10dp"
                android:background="@{lockAdd.monRepeat?@color/selected:@color/un_selected}"
                android:onClick="@{v->lockAdd.setMonRepeat(!lockAdd.monRepeat)}"
                android:text="@string/monday"
                />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_margin="10dp"
                android:background="@{lockAdd.tueRepeat?@color/selected:@color/un_selected}"
                android:onClick="@{v->lockAdd.setTueRepeat(!lockAdd.tueRepeat)}"
                android:text="@string/tuesday"/>

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_margin="10dp"
                android:background="@{lockAdd.wedRepeat?@color/selected:@color/un_selected}"
                android:onClick="@{v->lockAdd.setWedRepeat(!lockAdd.wedRepeat)}"
                android:text="@string/wednesday"/>

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_margin="10dp"
                android:background="@{lockAdd.thuRepeat?@color/selected:@color/un_selected}"
                android:onClick="@{v->lockAdd.setThuRepeat(!lockAdd.thuRepeat)}"
                android:text="@string/thursday"/>

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_margin="10dp"
                android:background="@{lockAdd.friRepeat?@color/selected:@color/un_selected}"
                android:onClick="@{v->lockAdd.setFriRepeat(!lockAdd.friRepeat)}"
                android:text="@string/friday"/>

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_margin="10dp"
                android:background="@{lockAdd.satRepeat?@color/selected:@color/un_selected}"
                android:onClick="@{v->lockAdd.setSatRepeat(!lockAdd.satRepeat)}"
                android:text="@string/saturday"/>

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_margin="10dp"
                android:background="@{lockAdd.sunRepeat?@color/selected:@color/un_selected}"
                android:onClick="@{v->lockAdd.setSunRepeat(!lockAdd.sunRepeat)}"
                android:text="@string/sunday"/>

        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:orientation="horizontal"
            >

            <Button
                android:id="@+id/lock_add_cancel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/cancel"
                />

            <Button
                android:id="@+id/lock_add_delete"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/delete"
                />

            <Button
                android:id="@+id/lock_add_sure"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/sure"
                />

        </LinearLayout>

    </LinearLayout>
</layout>